# swiftcast

./: .gitignore  README.md  build-dev.sh  index.html  package-lock.json  package.json  run-dev.sh  개발현황.md  백업_복원_기능_가이드.md  백업_복원_기능_완료_보고서.md  테스트_보고서.md  핵심_작동_원리.md
.cargo/: config.toml
.github/workflows/: build.yml
docs/: CONTEXT_PROVIDERS.md  GUIDE.md
src/: App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude_how/: 01_SSE_STREAMING_FORMAT.md  02_TOOL_USE_FORMAT.md  03_TASK_SUBAGENT_ARCHITECTURE.md  04_SYSTEM_PROMPT_STRUCTURE.md  05_TERMINAL_DISPLAY.md  06_HOOK_CAPTURE_POINTS.md  README.md  claude_code_internals.html
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: account.rs  mod.rs  session.rs
src-tauri/src/proxy/: mod.rs  question_detector.rs  server.rs  step_tracker.rs  webhook.rs
src-tauri/src/proxy/hooks/: compaction_injector.rs  context.rs  context_provider.rs  custom_task.rs  file_logger.rs  mod.rs  registry.rs  traits.rs
src-tauri/src/storage/: database.rs
src/components/: AccountManager.tsx  Dashboard.tsx  SessionManager.tsx  Settings.tsx  UsageMonitor.tsx
src/locales/: en.json  ja.json  ko.json  zh.json
