[package]
name = "swiftcast"
version = "0.2.0"
description = "AI API Proxy and Usage Monitoring Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1"
regex = "1.12.2"
async-trait = "0.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
